--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+    .btn-login{
+        width: 200px;
+        height: 50px;
+    }
+
+</style>
 <body>
 <div class="container" style="display: flex; justify-content: center; align-content: center; align-items: center; flex-direction: column; margin: 200px auto; ">
     <h1>카카오 로그인</h1>
-    <a th:href="${location}">
-        <img src="/images/kakao_login_medium_narrow.png" >
+    <a th:href="${kakaoLogin}">
+        <img class="btn-login" src="/images/kakao_login_medium_narrow.png" >
+    </a>
+    <h1>네이버 로그인</h1>
+    <a th:href="${naverLogin}">
+        <img class="btn-login" src="/images/naver_btnG_login.png" >
     </a>
 </div>
 </body>
