--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,16 +4,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet"
-	type="text/css" />
+<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-<link rel="stylesheet" href="/styles/index.css">
-<title>Index</title>
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<title>File Park - Index</title>
 </head>
 
 <body>
 	<header th:replace="~{/layouts/header :: header}"></header>
-	index page
+	<aside th:replace="~{/layouts/aside :: aside}"></aside>
 </body>
 
 </html>
