--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -15,37 +15,21 @@
 		</ul>
 	</div>
 	<div style="display: flex; gap: 10px; align-items: center;">
-		<div th:if="${session.provider=='KAKAO'}" style="display: flex; justify-content: space-between;">
-			<p style="display: flex;">환영합니다, <img class="profile-home" th:src="${session.profileImage != null ? session.profileImage : '/images/noimage.png'}"><span
-					th:text="${session.name}"></span>님!
-			</p>
-			<button type="button" id="logout-kakao" class="btn btn-outline-secondary"
-					th:attr="onclick='location.href=\'' + ${session.kakao_logout_uri} + '\''">로그아웃
-			</button>
-		</div>
-		<div th:if="${session.provider=='NAVER'}" style="display: flex; justify-content: space-between;">
-			<p style="display: flex;">환영합니다, <img class="profile-home" th:src="${session.profileImage != null ? session.profileImage : '/images/noimage.png'}"><span
-					th:text="${session.name}"></span>님!
-			</p>
-			<button type="button" id="logout-naver" class="btn btn-outline-secondary"
-					th:attr="onclick='location.href=\'' + ${session.naver_logout_uri} + '\''">로그아웃
-			</button>
-		</div>
 		<a class="btn btn-ghost" th:if="${session.userId == null}" href="/login">로그인</a>
-		<a class="btn btn-ghost" th:if="${session.userId == null}" href="/signup">회원가입</a>
-		<div style="user-select: none;" th:if="${session.userId != null}">
+		<div style="user-select: none; display: flex; align-items: center;" th:if="${session.userId != null}">
+			<div style="margin-right: 5px; font-size: 0.8rem;">
+				<span th:text="${session.name}"></span>
+				<span>님 환영합니다!</span>
+			</div>
 			<div class="dropdown dropdown-start">
-				<div class="avatar" tabindex="0" role="button"
-					style="cursor: pointer;">
+				<div class="avatar" tabindex="0" role="button" style="cursor: pointer;">
 					<div class="rounded-full" style="width: 50px;">
-						<img
-							src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+						<img th:src="${session.profileImage != null ? session.profileImage : '/images/noimage.png'}" />
 					</div>
 				</div>
-				<ul tabindex="0"
-					class="dropdown-content menu bg-base-100 rounded-box z-1 w-40 p-2 shadow-sm">
+				<ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-40 p-2 shadow-sm">
 					<li><a href="/profile">내 프로필</a></li>
-					<!-- <li><a href="/logout">로그아웃</a></li> -->
+					<li><a th:href="${session.logout_uri}">로그아웃</a></li>
 				</ul>
 			</div>
 		</div>
