--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -9,7 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <style>
-        #profile-img:hover {
+        .profile-img {
+            border-radius: 100px;
+            width: 200px;
+            height: 200px;
+            border: 1px solid lightgrey;
+        }
+
+        .profile-img:hover {
             cursor: pointer;
             filter: brightness(80%);
         }
@@ -22,8 +29,13 @@
     <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%; flex-direction: column; ">
         <div style="display: flex; position:relative; left: -150px;">
             <input type="file" id="update-profile" style="display: none;">
-            <img th:src="${session.profileImage}" onerror="this.src='/images/noimage.png'" id="profile-img"
-                 style="border-radius: 100px; width: 200px; height: 200px; border: 1px solid lightgrey;">
+            <div th:if="${session.profileImage.startsWith('http')}">
+                <img th:src="${session.profileImage}" onerror="this.src='/images/noimage.png'" class="profile-img">
+            </div>
+            <div th:unless="${session.profileImage.startsWith('http')}">
+                <img th:src="${session.storageUrl}+'/profile/'+${session.profileImage}" onerror="this.src='/images/noimage.png'"
+                     class="profile-img">
+            </div>
             <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 50px;">
                 <input type="text" th:value="${session.name}" placeholder="이름 입력" , class="input" id="mypage-name"
                        style="border-radius: 5px; padding: 10px; height: 50px; width: 300px; margin-bottom: 10px;">
@@ -42,7 +54,7 @@
 </body>
 </html>
 <script>
-    $("#profile-img").click(function () {
+    $(".profile-img").click(function () {
         $("#update-profile").trigger("click");
     });
     $("#update-profile").change(function (e) {
@@ -50,7 +62,7 @@
         if (file) {
             let reader = new FileReader();
             reader.onload = function (e) {
-                $("#profile-img").attr("src", e.target.result);
+                $(".profile-img").attr("src", e.target.result);
             };
             reader.readAsDataURL(file);
         }
@@ -68,7 +80,10 @@
             contentType: false,
             url: "./api/updateProfile",
             success: function (res) {
-                alert("변경 사항 저장")
+                if (confirm("변경 사항을 저장하시겠습니까?")) {
+                    location.reload();
+                    alert("변경 사항 저장완료")
+                }
                 console.log(res);
             },
             error: function () {
