--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -43,7 +43,7 @@
                        style="background-color: lightgrey; padding: 10px; border-radius: 5px; height: 50px; width: 300px; font-weight: bold;">
             </div>
         </div>
-        <textarea th:type="text" class="textarea" th:text="${session.description}" id="mypage-description"
+        <textarea th:type="text" class="textarea" th:text="${session.description}" id="mypage-description" placeholder="소개글을 작성해보세요!"
                   style="width: 900px; height: 250px; margin-top: 50px; padding: 10px; font-size: 15px;"></textarea>
         <div style="margin-top: 30px; margin-left: auto; margin-right: 20%; white-space: nowrap;">
             <button class="btn" id="mypage-save">변경사항 저장</button>
