--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -28,14 +28,10 @@
 <main style="margin-top: 80px; margin-left: 300px; padding: 20px; width: calc(100% - 300px); height: calc(100vh - 80px);overflow: hidden;">
     <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%; flex-direction: column; ">
         <div style="display: flex; position:relative; left: -150px;">
+            <input type="hidden" id="sessionUserId" th:value="${session.userId}">
             <input type="file" id="update-profile" style="display: none;">
-            <div th:if="${session.profileImage.startsWith('http')}">
-                <img th:src="${session.profileImage}" onerror="this.src='/images/noimage.png'" class="profile-img">
-            </div>
-            <div th:unless="${session.profileImage.startsWith('http')}">
-                <img th:src="${session.storageUrl}+'/profile/'+${session.profileImage}" onerror="this.src='/images/noimage.png'"
-                     class="profile-img">
-            </div>
+            <img th:src="${session.profileImage.startsWith('http')? session.profileImage : session.storageUrl+'/profile/'+session.profileImage}"
+                 onerror="this.src='/images/noimage.png'" class="profile-img">
             <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 50px;">
                 <input type="text" th:value="${session.name}" placeholder="이름 입력" , class="input" id="mypage-name"
                        style="border-radius: 5px; padding: 10px; height: 50px; width: 300px; margin-bottom: 10px;">
@@ -43,7 +39,8 @@
                        style="background-color: lightgrey; padding: 10px; border-radius: 5px; height: 50px; width: 300px; font-weight: bold;">
             </div>
         </div>
-        <textarea th:type="text" class="textarea" th:text="${session.description}" id="mypage-description" placeholder="소개글을 작성해보세요!"
+        <textarea th:type="text" class="textarea" th:text="${session.description}" id="mypage-description"
+                  placeholder="소개글을 작성해보세요!"
                   style="width: 900px; height: 250px; margin-top: 50px; padding: 10px; font-size: 15px;"></textarea>
         <div style="margin-top: 30px; margin-left: auto; margin-right: 20%; white-space: nowrap;">
             <button class="btn" id="mypage-save">변경사항 저장</button>
@@ -54,8 +51,41 @@
 </body>
 </html>
 <script>
-    $(".profile-img").click(function () {
-        $("#update-profile").trigger("click");
+    $(document).ready(function () {
+        let userId = new URLSearchParams(window.location.search).get("id");  // URL에서 userId 가져오기
+        let storageUrl = "https://kr.object.ncloudstorage.com/filepark-bucket/profile/";
+        if (userId) {
+            $.ajax({
+                type: "post",
+                url: "/api/readUser",
+                data: { id: userId },
+                dataType: "json",
+                success: function (res) {
+                    $("#mypage-name").val(res.name).attr("data", userId);
+                    $("#mypage-description").text(res.description).attr("data", userId);
+                    $("#mypage-createdAt").val("가입일 : " + res.createdAt).attr("data", userId);
+                    $(".profile-img").attr("src", res.profileImage.startsWith('http') ? res.profileImage : storageUrl + res.profileImage).attr("data", userId);
+
+                    if (userId !== $("#sessionUserId").val()) {
+                        $("#mypage-name").prop("readonly", true);
+                        $("#mypage-description").prop("readonly", true);
+                        // 이미지 클릭 이벤트 비활성화
+                        $(".profile-img").off("click");
+                        // 버튼 비활성화
+                        $("mypage-save").prop("disabled",true);
+                    } else {
+                        $("#mypage-name").prop("readonly", false);
+                        $("#mypage-description").prop("readonly", false);
+                    }
+                },
+                error: function () {
+                    alert("유저 정보를 불러오지 못했습니다.");
+                }
+            });
+        } else {
+            alert("잘못된 접근입니다.");
+            window.location.href = "/";  // 잘못된 접근 시 메인 페이지로 이동
+        }
     });
     $("#update-profile").change(function (e) {
         let file = e.target.files[0];
@@ -68,27 +98,27 @@
         }
     });
     $("#mypage-save").click(function () {
-        let form = new FormData();
-        form.append("name", $("#mypage-name").val());
-        form.append("description", $("#mypage-description").val());
-        form.append("upload", $("#update-profile")[0].files[0]);
-        $.ajax({
-            type: "post",
-            dataType: "text",
-            data: form,
-            processData: false,
-            contentType: false,
-            url: "./api/updateProfile",
-            success: function (res) {
-                if (confirm("변경 사항을 저장하시겠습니까?")) {
+        if (confirm("변경 사항을 저장하시겠습니까?")) {
+            let form = new FormData();
+            form.append("name", $("#mypage-name").val());
+            form.append("description", $("#mypage-description").val());
+            form.append("upload", $("#update-profile")[0].files[0]);
+            $.ajax({
+                type: "post",
+                dataType: "text",
+                data: form,
+                processData: false,
+                contentType: false,
+                url: "./api/updateProfile",
+                success: function (res) {
                     location.reload();
                     alert("변경 사항 저장완료")
+                    console.log(res);
+                },
+                error: function () {
+                    alert("변경 사항 저장 실패")
                 }
-                console.log(res);
-            },
-            error: function () {
-                alert("변경 사항 저장 실패")
-            }
-        })
+            })
+        }
     });
 </script>
