--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
+<link rel="stylesheet" href="/styles/master.css" />
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <title>File Park - Index</title>
@@ -12,7 +14,6 @@
 
 <body>
 	<header th:replace="~{/layouts/header :: header}"></header>
-	<aside th:replace="~{/layouts/aside :: aside}"></aside>
 </body>
 
 </html>
