--- a/src/main/resources/templates/layouts/aside.html
+++ b/src/main/resources/templates/layouts/aside.html
@@ -6,7 +6,7 @@
     th:fragment="aside">
     <p>파일 공유 그룹</p>
     <div id="groups-list"
-        style="margin: 10px 0; width: 100%; height: 70vh; overflow-x: hidden; overflow-y: auto; display: flex; flex-direction: column; gap: 20px;">
+        style="margin: 10px 0; width: 100%; height: 80vh; overflow-x: hidden; overflow-y: auto; display: flex; flex-direction: column; gap: 20px;">
         <div class="skeleton" style="width: 100%; height: 80px;"></div>
         <div class="skeleton" style="width: 100%; height: 80px;"></div>
         <div class="skeleton" style="width: 100%; height: 80px;"></div>
@@ -18,26 +18,26 @@
     </div>
     <dialog id="participantModal" class="modal">
         <div class="modal-box">
-            <h3 class="text-lg font-bold">그룹 참여</h3>
-            <hr style="margin: 10px 0;">
-            <label for="group-code-input">그룹 참여 코드 입력</label>
-            <input type="text" id="group-code-input" class="input input-bordered" placeholder="그룹 참여 코드" autocomplete="off">
-            <p id="error-message" style="color: red;"></p>
-            <div class="modal-action">
+            <h3 style="font-size: 1.4rem; font-weight: 600;">그룹 참여</h3>
+            <div class="divider"></div>
+            <form id="participant-form">
+                <label for="group-code-input">그룹 참여 코드 입력</label>
+                <input type="text" id="group-code-input" class="input input-bordered" placeholder="그룹 참여 코드"
+                    autocomplete="off" required>
+                <p id="error-message" style="color: red;"></p>
                 <div class="modal-action">
-                    <button id="participant-button" class="btn btn-success">참여</button>
-                    <form method="dialog">
-                        <button class="btn">닫기</button>
-                    </form>
+                    <div class="modal-action">
+                        <button id="participant-button" type="submit" class="btn btn-success">참여</button>
+                        <button type="button" class="btn" onclick="participantModal.close()">닫기</button>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </dialog>
     <script>
-        const currentGroupId = "[[${groupId}]]";
         function fetchGroups() {
             $.ajax({
-                url: '/api/group/group-list',
+                url: '/api/group',
                 method: 'GET',
                 success: function (data) {
                     const groupsList = $('#groups-list');
@@ -51,9 +51,9 @@
                         return;
                     }
                     data.groups.forEach((group) => {
-                        if(group.id === Number(currentGroupId)) {
+                        if (group.hashedId === "[[${hashedId}]]") {
                             groupsList.append(`
-                                <a href="/groups/${group.id}" style="width: 100%; height: 80px; display: flex; justify-content: space-between; align-items: center; gap: 10px; border: 1.5px solid black; border-radius: 10px; padding: 10px; background-color: #d4bb69;">
+                                <a href="/groups/${group.hashedId}" style="width: 100%; height: 80px; display: flex; justify-content: space-between; align-items: center; gap: 10px; border: 1.5px solid black; border-radius: 10px; padding: 10px; background-color: #d4bb69;">
                                     <div style="display: flex; flex-direction: column;">
                                         <span style="width: 175px; padding: 0 5px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${group.name}</span>
                                         <p style="font-size: 0.7rem;">
@@ -68,7 +68,7 @@
                             `);
                         } else {
                             groupsList.append(`
-                                <a href="/groups/${group.id}" style="width: 100%; height: 80px; display: flex; justify-content: space-between; align-items: center; gap: 10px; border: 1.5px solid black; border-radius: 10px; padding: 10px; background-color: #f0f0f0;">
+                                <a href="/groups/${group.hashedId}" style="width: 100%; height: 80px; display: flex; justify-content: space-between; align-items: center; gap: 10px; border: 1.5px solid black; border-radius: 10px; padding: 10px; background-color: #f0f0f0;">
                                     <div style="display: flex; flex-direction: column;">
                                         <span style="width: 175px; padding: 0 5px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${group.name}</span>
                                         <p style="font-size: 0.7rem;">
@@ -99,10 +99,11 @@
             fetchGroups();
             setInterval(fetchGroups, 10000);
 
-            $('#participant-button').click(() => {
+            $('#participant-form').submit((e) => {
+                e.preventDefault();
                 const groupCode = $('#group-code-input').val();
                 $.ajax({
-                    url: '/api/group/invite/' + groupCode,
+                    url: '/api/group/invite?code=' + groupCode,
                     method: 'GET',
                     success: function (data) {
                         $('#error-message').text('');
@@ -110,7 +111,10 @@
                         $('#participantModal')[0].close();
                     },
                     error: function (error) {
-                        $('#error-message').text(error.responseJSON.message);
+                        $('#error-message').text('그룹 참여에 실패했습니다. 다시 시도해주세요.');
+                        if (error.responseJSON.status === 'fail') {
+                            $('#error-message').text(error.responseJSON.message);
+                        }
                     }
                 });
             });
