--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -3,7 +3,7 @@
 <header
 	style="display: flex; justify-content: space-between; align-items: center; padding: 0 10%; position: fixed; width: 100%; height: 80px; top: 0;"
 	class="navbar bg-base-100 shadow-sm" th:fragment="header">
-	<a style="display: flex; align-items: center; gap: 5px;" href="/">
+	<a class="btn btn-ghost" style="display: flex; align-items: center; gap: 5px; height: 60px;" href="/">
 		<span style="width: 60px;">
 			<img style="width: 100%; height: 100%;" src="/logo.png" alt="logo">
 		</span>
@@ -11,7 +11,7 @@
 	</a>
 	<div>
 		<ul>
-			<li><a href="/home">Home</a></li>
+			<li><a class="btn btn-ghost" href="/home">Home</a></li>
 		</ul>
 	</div>
 	<div style="display: flex; gap: 10px; align-items: center;">
