--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <header
-	style="display: flex; justify-content: space-between; align-items: center; padding: 0 10%; position: fixed; width: 100%; height: 80px; top: 0;"
+	style="display: flex; justify-content: space-between; align-items: center; padding: 0 10%; position: fixed; width: 100%; height: 80px; top: 0; z-index: 1;"
 	class="navbar bg-base-100 shadow-sm" th:fragment="header">
 	<a class="btn btn-ghost" style="display: flex; align-items: center; gap: 5px; height: 60px;" href="/">
 		<span style="width: 60px;">
