--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -34,15 +34,17 @@
             <input type="file" id="update-profile" style="display: none;">
             <img src="" onerror="this.src='/images/noimage.png'" class="profile-img">
             <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 50px;">
+                <p style="align-content: center; font-weight: bold; white-space: nowrap; margin-top: 50px;">이 름</p>
                 <input type="text" placeholder="이름 입력" , class="input" id="mypage-name"
-                       style="border-radius: 5px; padding: 10px; height: 50px; width: 300px; margin-bottom: 10px;">
+                       style="border-radius: 5px; padding: 10px; height: 50px; width: 300px; margin-bottom: 10px; margin-top: 10px;">
                 <input type="text" class="input" readonly id="mypage-createdAt"
                        style="background-color: lightgrey; padding: 10px; border-radius: 5px; height: 50px; width: 300px; font-weight: bold;">
             </div>
         </div>
+        <p style="align-content: center; font-weight: bold; white-space: nowrap; position: relative; left: -420px; margin-top: 50px;">소개글</p>
         <textarea th:type="text" class="textarea" th:text="${session.description}" id="mypage-description"
                   placeholder="소개글을 작성해보세요!"
-                  style="width: 900px; height: 250px; margin-top: 50px; padding: 10px; font-size: 15px;"></textarea>
+                  style="width: 900px; height: 250px; margin-top: 10px; padding: 10px; font-size: 15px;"></textarea>
         <div style="margin-top: 30px; margin-left: auto; margin-right: 20%; white-space: nowrap;">
             <button class="btn" id="mypage-save">변경사항 저장</button>
             <button class="btn" onclick="history.back();">이전으로</button>
@@ -122,4 +124,7 @@
             })
         }
     });
+    $(".profile-img").click(function (){
+        $("#update-profile").trigger("click");
+    })
 </script>
