--- a/src/main/resources/templates/groupSetting.html
+++ b/src/main/resources/templates/groupSetting.html
@@ -102,6 +102,7 @@
                 },
                 error: function () {
                     alert("그룹 정보를 불러오지 못했습니다.");
+                    location.href="/home";
                 }
             });
         };
