--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -83,6 +83,7 @@
                 },
                 error: function () {
                     alert("유저 정보를 불러오지 못했습니다.");
+                    location.href="/home";
                 }
             });
         } else {
